# BBMesh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  command_handlers.py  config_init.py  db_operations.py  debug_splitting.py  dopewars.py  example_config.ini  mesh-bbs.service  message_processing.py  pyproject.toml  requirements.txt  server.py  test_bbmesh.py  test_lock_fix.py  todo.md  tradewars_interface.py  tradewars_server.py  utils.py
.claude/: settings.local.json
.github/workflows/: claude.yml  release.yml
config/: bbmesh.yaml  bbmesh.yaml.example  menus.yaml  menus.yaml.example  motd.txt  plugins.yaml  plugins.yaml.example
config/backups/: menus.yaml.backup_20250731_132232  plugins.yaml.backup_20250731_135829
data/: bulletin_system.db
docs/: NEW_NODE_NOTIFICATION_FEATURE.md  PLUGIN_ARCHITECTURE.md  api.md  configuration.md  deployment.md  new_node_notification_diagram.md  new_node_notification_plan.md  new_node_notification_quickstart.md  new_node_notification_summary.md  plugins.md  troubleshooting.md
docs/examples/: README.md  development_config.yaml  production_config.yaml  simple_plugins.py
plugins/bbmesh_bulletin_plugin/: README.md  bulletin_plugin.py  install.py  requirements.txt
plugins/bbmesh_bulletin_plugin/config/: menu_additions.yaml  motd_bulletin.txt  plugin_config.yaml
plugins/bbmesh_tradewars_plugin/: README.md  diagnostic.py  diagnostic.sh  formatters.py  install.py  storage.py  test_init.py  trade_calculator.py  tradewars_plugin.py  universe.py
plugins/tradewars/Original/: tradewars.py
scripts/: README.md  install-service.sh  manage-service.sh
src/bbmesh/: __init__.py  cli.py  cli_nodes.py
src/bbmesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bbmesh/core/: __init__.py  admin_manager.py  config.py  meshtastic_interface.py  message_handler.py  node_tracker.py  server.py
src/bbmesh/menus/: __init__.py  menu_system.py
src/bbmesh/plugins/: __init__.py  askai.py  base.py  (+2 more)
(+3 files in other folders)
