[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbmesh"
version = "0.2.0-beta.1"
description = "A Meshtastic BBS system inspired by classic bulletin board systems"
authors = [{name = "BBMesh Team", email = "contact@bbmesh.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["meshtastic", "bbs", "mesh", "radio", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Ham Radio",
    "Topic :: System :: Networking",
]

dependencies = [
    "meshtastic>=2.0.0",
    "PyYAML>=6.0",
    "pyserial>=3.5",
    "click>=8.0.0",
    "colorama>=0.4.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/deadchannelsky/BBMesh"
Repository = "https://github.com/deadchannelsky/BBMesh.git"
Issues = "https://github.com/deadchannelsky/BBMesh/issues"

[project.scripts]
bbmesh = "bbmesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/bbmesh --cov-report=html --cov-report=term"